# ArduPilot-Modes

./: .gitignore  .gitmodules  README.md  run.sh
auto_mode/: README.md  waypoints.py
auto_mode/c/: CMakeLists.txt  waypoints.cpp
avoid_obstacle/: README.md  avoid.py  guided.py
avoid_obstacle/c/: CMakeLists.txt  avoid.cpp
avoid_obstacle/lua/: avoid.lua
avoidance_mode/: README.md
geofence/c/: CMakeLists.txt  geofence.cpp
guided_mode/: README.md  guided.py
proximity_avoiding/: README.md  avoid.py  mav.parm
simulate-traces/: file-counterexample.txt  file-success.txt  file-x.txt  simulate-traces.py
simulations/sim_adsb/: CMakeLists.txt  README.md  run.sh  sim_adsb.c
simulations/sim_adsb/cpp/: README.md  run.sh  sim_adsb.cpp
simulations/sim_adsb/python/: Pipfile  README.md  sim_adsb.py
traffic_monitor/c/: CMakeLists.txt  traffic_monitor.cpp
